--- a/fit4ufront/package.json
+++ b/fit4ufront/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@firebase/app-compat": "^0.2.14",
     "@ionic/react": "^7.1.3",
+    "@material-tailwind/react": "^2.0.6",
     "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
