--- a/fit4ufront/package.json
+++ b/fit4ufront/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.0.0",
     "formik": "^2.4.2",
     "gapi-script": "^1.2.0",
+    "jsonwebtoken": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
