--- a/fit4ufront/package.json
+++ b/fit4ufront/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@firebase/app-compat": "^0.2.14",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@ionic/react": "^7.1.3",
     "@material-tailwind/react": "^2.0.6",
     "@react-oauth/google": "^0.11.0",
