--- a/fit4ufront/package.json
+++ b/fit4ufront/package.json
@@ -28,6 +28,7 @@
     "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
