--- a/fit4ufront/package.json
+++ b/fit4ufront/package.json
@@ -18,12 +18,14 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.1.1",
     "@stripe/stripe-js": "^1.54.1",
+    "apexcharts": "^3.41.1",
     "axios": "^1.4.0",
     "firebase": "^10.0.0",
     "formik": "^2.4.2",
     "gapi-script": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.4.1",
