--- a/fit4ufront/package.json
+++ b/fit4ufront/package.json
@@ -30,7 +30,10 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.7"
   },
